Created Front-End About Forms, Navbar And User Profile

--- a/OnlyPan/Views/Home/Index.cshtml
+++ b/OnlyPan/Views/Home/Index.cshtml
@@ -23,11 +23,11 @@
             </div>
             <div class="p-4 py-0">
               <!-- Contenido principal de la tarjeta -->
-              <p class="text-base text-black">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                            <p class="text-base text-black">"OnlyPan es mucho más que un simple recetario en línea; es una comunidad vibrante y apasionada de chefs aficionados, cocineros experimentados y amantes de la comida de todo el mundo. Aquí, compartimos no solo recetas deliciosas, sino también historias culinarias, consejos útiles, y un sinfín de inspiración para llevar tu pasión por la cocina al siguiente nivel."</p>
             </div>
             <div class="bg-third-color text-black p-4">
               <!-- Contenido del pie de la tarjeta -->
-              <p class="text-sm">Pie de la tarjeta con información adicional.</p>
+              <p class="text-sm">#DescripcionesIncreibles #Bienvenida #EnserioLeesEsto?</p>
             </div>
           </div>
           <!-- Fin Tarjeta -->
@@ -49,16 +49,16 @@
           <div class=" mx-auto bg-white rounded-lg overflow-hidden shadow-lg">
             <div class="bg-gradient-to-r from-first-color to-second-color text-black p-4">
               <!-- Contenido de la cabecera de la tarjeta -->
-              <h1 class="text-2xl font-bold">Título de la Tarjeta</h1>
-              <p class="text-sm">Subtítulo o descripción corta</p>
+              <h1 class="text-2xl font-bold">Solicitud de Roles</h1>
+              <p class="text-sm">Quieres Ayudar a que nuestra comunidad crezca? Solicita tu Rol de Chef, o Administrador de la Página</p>
             </div>
-            <div class="p-4">
+            <div class="p-4 py-1">
               <!-- Contenido principal de la tarjeta -->
-              <p class="text-base text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget venenatis neque.</p>
+                            <p class="text-base text-black">Pero eso no es todo, también estamos buscando apasionados de la gastronomía que quieran ser Administradores de la Página. Como administrador, tendrás un papel fundamental en mantener la comunidad de OnlyPan en marcha, gestionando contenido, moderando discusiones y ayudando a crear un ambiente amigable y acogedor para todos los miembros.</p>
             </div>
             <div class="bg-third-color text-black p-4">
               <!-- Contenido del pie de la tarjeta -->
-              <p class="text-sm">Pie de la tarjeta con información adicional.</p>
+              <p class="text-sm">#QuieroSerAdmin</p>
             </div>
           </div>
           <!-- Fin Tarjeta -->
