--- a/OnlyPan/Views/User/ForgotPassword.cshtml
+++ b/OnlyPan/Views/User/ForgotPassword.cshtml
@@ -2,8 +2,8 @@
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
-      Resetea tu contraseña
+    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900 uppercase">
+      Recupera Tu Contraseña
     </h2>
   </div>
 
@@ -11,9 +11,9 @@
     <form method="post" class="space-y-6" asp-controller="User" asp-action="ForgotPassword">
       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
       <div>
-        <label class="block text-sm font-medium leading-6 text-gray-900" asp-for="Email"></label>
+        <label class="block text-sm font-medium leading-6 text-gray-900 uppercase pb-3" asp-for="Email"></label>
         <input type="email" class="block w-full rounded-md 
-          border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+          border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 pl-3
           focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" asp-for="Email">
         <span asp-validation-for="Email" class="text-danger"></span>
       </div>
