--- a/OnlyPan/Views/User/ViewProfileRol.cshtml
+++ b/OnlyPan/Views/User/ViewProfileRol.cshtml
@@ -7,9 +7,9 @@
 <div class="container-fluid">
   <h1>Asignacion de rol</h1>
   <!--TODO Display the profile into a floating card-->
-  <div class="">
+  <div class="container">
 
-    <img class="img-fluid" src="@usuario?.Foto" alt="User img"/>
+    <img class="img-fluid img-prof" src="@usuario?.Foto" alt="User img"/>
     <div>
       <p class="">Nombre de usuario:<span>@usuario?.Nombre</span></p>
       <p class="">Correo Electronico:<span>@usuario?.Correo</span></p>
