--- a/OnlyPan/Views/User/ViewProfileRol.cshtml
+++ b/OnlyPan/Views/User/ViewProfileRol.cshtml
@@ -1,23 +1,23 @@
-@model List<SolicitudRol>
+@model SolicitudRol
 
 @{
-  Usuario? usuario = Model.First().UsuarioSolicitudNavigation;
-  Rol? rolSolicitado = Model.First().RolSolicitadoNavigation;
+  Usuario? usuario = Model.IdUsuarioSolicitudNavigation;
+  Rol? rolSolicitado = Model.IdRolSolicitudNavigation;
 }
 <div class="container-fluid">
   <h1>Asignacion de rol</h1>
   <!--TODO Display the profile into a floating card-->
   <div class="container">
 
-    <img class="img-fluid img-prof" src="@usuario?.Foto" alt="User img"/>
+    <img class="img-fluid img-prof" src="data:image;base64,@Convert.ToBase64String(usuario.Foto!)" alt="User img"/>
     <div>
       <p class="">Nombre de usuario:<span>@usuario?.Nombre</span></p>
       <p class="">Correo Electronico:<span>@usuario?.Correo</span></p>
       <p class="">Rol Solicitado:<span>@rolSolicitado?.NombreRol</span></p>
       <div>
-        <a asp-action="AcceptPetition" asp-controller="Role" asp-route-petitionId="@Model.First().IdSolicitud" 
+        <a asp-action="AcceptPetition" asp-controller="Role" asp-route-idUser="@Model.IdUsuarioSolicitud" asp-route-idRol="@Model.IdRolSolicitud"
            class="btn btn-success">Aceptar Solicitud</a>
-        <a asp-action="RejectPetition" asp-controller="Role" asp-route-petitionId="@Model.First().IdSolicitud" 
+        <a asp-action="RejectPetition" asp-controller="Role"  asp-route-idUser="@Model.IdUsuarioSolicitud" asp-route-idRol="@Model.IdRolSolicitud"
            class="btn btn-danger">Rechazar Solicitud</a>
       </div>
     </div>
