Modified the View to match the New ViewModels and Dtos logic into the backend

--- a/OnlyPan/Views/User/ForgotPassword.cshtml
+++ b/OnlyPan/Views/User/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-@model OnlyPan.Models.ViewModels.ForgotPasswordViewModel
+@model OnlyPan.Models.ViewModels.UserViewModels.ForgotPasswordViewModel
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
