--- a/OnlyPan/Views/User/Login.cshtml
+++ b/OnlyPan/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-@model OnlyPan.Models.ViewModels.LoginViewModel
+@model OnlyPan.Models.ViewModels.UserViewModels.LoginViewModel
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900 uppercase">
