--- a/OnlyPan/Views/User/EditProfile.cshtml
+++ b/OnlyPan/Views/User/EditProfile.cshtml
@@ -1,4 +1,4 @@
-@model OnlyPan.Models.ViewModels.ProfileViewModel
+@model OnlyPan.Models.ViewModels.UserViewModels.ProfileEditViewModel
 <div class="container-fluid">
   <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900 text-uppercase">Editar Perfil de usuario</h2>
   <!--TODO Display the profile into a floating card-->
@@ -11,6 +11,10 @@
       <div class="group">
                 <label asp-for="Email" class="block text-sm font-medium leading-6 text-gray-900 text-uppercase"></label>
         <input asp-for="Email" value="@ViewBag.Email" class="pl-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+      </div>
+      <div class="group">
+                <label asp-for="Biography" class="block text-sm font-medium leading-6 text-gray-900 text-uppercase"></label>
+        <input asp-for="Biography" value="@ViewBag.Biography" class="pl-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
       </div>
       <div class="group">
                 <label asp-for="Photo" class="block text-sm font-medium leading-6 text-gray-900 text-uppercase"></label>
