--- a/OnlyPan/Views/User/Profile.cshtml
+++ b/OnlyPan/Views/User/Profile.cshtml
@@ -1,17 +1,20 @@
-@model Usuario
+@model OnlyPan.Models.ViewModels.UserViewModels.ProfileViewModel
 
 <div class="container-fluid m-3 flex align-items-center flex-column">
   <h1 class="text-uppercase font-bold my-3 text-xl">Perfil de usuario</h1>
   <!--TODO Display the profile into a more atractive way-->
     <div class="grid gap-1 grid-cols-2 w-1/2 justify-items-center my-3">
         <div class="img-prof flex align-items-center justify-items-center">
-    <img class="img-fluid user-image" src="data:image;base64,@Convert.ToBase64String(Model.Foto!)"
+    <img class="img-fluid user-image" src="data:image;base64,@Convert.ToBase64String(Model.Photo!)"
          alt="User img"/>
         </div>
     <div class = "">
-            <span class=" text-lg italic"> @Model.RolNavigation.NombreRol</span>
-            <h1 class="font-bold text-4xl mb-3 italic"> @Model.Nombre</h1>
-            <p class="font-bold text-uppercase my-3">Correo Electronico:<span class="font-normal normal-case"> @Model.Correo</span></p>
+            <span class=" text-lg italic"> @Model.Rol</span>
+            <h1 class="font-bold text-4xl mb-3 italic"> @Model.Name</h1>
+            <p class="font-normal normal-case my-3">@Model.Biography</p>
+            <p class="font-bold text-uppercase my-3">Correo Electronico:<span class="font-normal normal-case"> @Model.Email</span></p>
+            <p class="font-bold text-uppercase my-3">Seguidores:<span class="font-normal normal-case"> @Model.Followers</span></p>
+            <p class="font-bold text-uppercase my-3">Seguidos:<span class="font-normal normal-case"> @Model.Followed</span></p>
             
       
             <div>
