--- a/OnlyPan/Views/User/ViewProfileRol.cshtml
+++ b/OnlyPan/Views/User/ViewProfileRol.cshtml
@@ -1,23 +1,22 @@
-@model SolicitudRol
+@model OnlyPan.Models.ViewModels.UserViewModels.ProfileRolViewModel
 
-@{
-  Usuario? usuario = Model.IdUsuarioSolicitudNavigation;
-  Rol? rolSolicitado = Model.IdRolSolicitudNavigation;
-}
 <div class="container-fluid">
   <h1>Asignacion de rol</h1>
   <!--TODO Display the profile into a floating card-->
   <div class="container">
 
-    <img class="img-fluid img-prof" src="data:image;base64,@Convert.ToBase64String(usuario.Foto!)" alt="User img"/>
+    <img class="img-fluid img-prof" src="data:image;base64,@Convert.ToBase64String(Model.Photo!)" alt="User img"/>
     <div>
-      <p class="">Nombre de usuario:<span>@usuario?.Nombre</span></p>
-      <p class="">Correo Electronico:<span>@usuario?.Correo</span></p>
-      <p class="">Rol Solicitado:<span>@rolSolicitado?.NombreRol</span></p>
+      <p class="">Nombre de usuario:<span>@Model.Name</span></p>
+      <p class="">Correo Electronico:<span>@Model.Email</span></p>
+      <p class="">Seguidores:<span>@Model.Followers</span></p>
+      <p class="">Seguidos:<span>@Model.Followed</span></p>
+      <p class="">Rol Actual:<span>@Model.CurrentRol</span></p>
+      <p class="">Rol Solicitado:<span>@Model.NewRol</span></p>
       <div>
-        <a asp-action="AcceptPetition" asp-controller="Role" asp-route-idUser="@Model.IdUsuarioSolicitud" asp-route-idRol="@Model.IdRolSolicitud"
+        <a asp-action="AcceptPetition" asp-controller="Role" asp-route-idUser="@Model.IdUser" asp-route-idRol="@Model.IdRolNew"
            class="btn btn-success">Aceptar Solicitud</a>
-        <a asp-action="RejectPetition" asp-controller="Role"  asp-route-idUser="@Model.IdUsuarioSolicitud" asp-route-idRol="@Model.IdRolSolicitud"
+        <a asp-action="RejectPetition" asp-controller="Role"  asp-route-idUser="@Model.IdUser" asp-route-idRol="@Model.IdRolNew"
            class="btn btn-danger">Rechazar Solicitud</a>
       </div>
     </div>
