Added the funcionality for accepting and refusing the RolePetitions with the RoleRepository.cs

--- a/OnlyPan/Views/Role/ViewRole.cshtml
+++ b/OnlyPan/Views/Role/ViewRole.cshtml
@@ -47,5 +47,7 @@
       </td>
     </tr>
   }
+  <span class="alert-danger">@ViewBag.Error</span>
+  <span class="alert-success">@ViewBag.Success</span>
   </tbody>
 </table>
