--- a/OnlyPan/Views/Shared/_Layout.cshtml
+++ b/OnlyPan/Views/Shared/_Layout.cshtml
@@ -2,115 +2,121 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-white">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>OnlyPan</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/normalize.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/normalize.css" asp-append-version="true"/>
 </head>
 <body class="h-full">
-    <header>
-        <!-- NavBar OnlyPan-->
-        <nav class="navbar navbar-expand-lg bg-[var(--black)] navbar-page ">
-            <div class="container-fluid">
-                <!--Logo-->
-                <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300" asp-area="" asp-controller="Home"
-                   asp-action="Index">
-                    Only<span class="logo2">Pan</span>
-                </a>
+<header>
+    <!-- NavBar OnlyPan-->
+    <nav class="navbar navbar-expand-lg bg-[var(--black)] navbar-page ">
+        <div class="container-fluid">
+            <!--Logo-->
+            <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300" asp-area="" asp-controller="Home"
+               asp-action="Index">
+                Only<span class="logo2">Pan</span>
+            </a>
 
-                @* Navbar navigation links *@
-                <div class="navbar-collapse d-sm-inline-flex  justify-content-between flex ">
-                    <ul class="navbar-nav flex-grow-1 gap-2 ">
+            @* Navbar navigation links *@
+            <div class="navbar-collapse d-sm-inline-flex  justify-content-between flex ">
+                <ul class="navbar-nav flex-grow-1 gap-2 ">
+                    <li class="nav-item font-bold">
+                        <a class="nav-link text-black bg-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Index">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/>
+                            </svg>
+
+                            Inicio
+                        </a>
+                    </li>
+                    <li class="nav-item font-bold">
+                        <a class="nav-link text-black hover:bg-amber-600   bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Bio">
+                            ¿Quienes Somos?
+
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z"/>
+                            </svg>
+
+
+                        </a>
+                    </li>
+                    <li class="nav-item font-bold">
+                        <a class="nav-link text-black hover:bg-amber-600   bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Recipes" asp-action="Index">
+                            Recetas
+                        </a>
+                    </li>
+                    @if (Context.User.IsInRole("2") || Context.User.IsInRole("3"))
+                    {
                         <li class="nav-item font-bold">
-                            <a class="nav-link text-black bg-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Index">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
-                                </svg>
-
-                                Inicio
-                            </a>
+                            <a class="nav-link text-black hover:bg-amber-600 hover:text-white rounded-md px-3 py-2" asp-area="" asp-controller="Role" asp-action="Moderate">Solicitudes Roles</a>
                         </li>
-                        <li class="nav-item font-bold">
-                            <a class="nav-link text-black hover:bg-amber-600   bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Bio">¿Quienes Somos?
+                    }
+                </ul>
+            </div>
+            @* Search Bar *@
+            <form class="d-flex m-1.5 space-x-1.5" role="search">
+                <input class="form-control rounded-md input-navbar" type="search" placeholder="¿Qué Cocinarás Hoy?" aria-label="Search">
+                <button class="btn hover:bg-amber-600 hover:text-white rounded-md px-3 py-2 bg-[var(--second-color)]" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"/>
+                    </svg>
+                </button>
+            </form>
+            <!--Login buttons-->
+            @if (Context.User.Identity is { IsAuthenticated: true })
+            {
+                <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
 
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
-                                </svg>
+                    <li class="nav-item">
+                        <a class="nav-link text-black bg-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 font-bold flex flex-row gap-2" asp-area="" asp-controller="User" asp-action="Profile">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-.189m-1.5.189a6.01 6.01 0 01-1.5-.189m3.75 7.478a12.06 12.06 0 01-4.5 0m3.75 2.383a14.406 14.406 0 01-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 10-7.517 0c.85.493 1.509 1.333 1.509 2.316V18"/>
+                            </svg>
 
+                            Perfil
+                        </a>
+                    </li>
+                    <li class="nav-item font-bold">
+                        <a class="nav-link text-black bg-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 font-bold flex flex-row gap-2" asp-area="" asp-controller="User" asp-action="Logout">
+                            Cerrar Sesión
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            }
+            else
+            {
+                <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
+                    <li class="nav-item">
 
-                            </a>
-                        </li>
-                        @if (Context.User.IsInRole("2") || Context.User.IsInRole("3"))
-                        {
-                            <li class="nav-item font-bold">
-                                <a class="nav-link text-black hover:bg-amber-600 hover:text-white rounded-md px-3 py-2" asp-area="" asp-controller="Role" asp-action="Moderate">Solicitudes Roles</a>
-                            </li>
-                        }
-                    </ul>
-                </div>
-                @* Search Bar *@
-                <form class="d-flex m-1.5 space-x-1.5" role="search">
-                    <input class="form-control rounded-md input-navbar" type="search" placeholder="¿Qué Cocinarás Hoy?" aria-label="Search">
-                    <button class="btn hover:bg-amber-600 hover:text-white rounded-md px-3 py-2 bg-[var(--second-color)]" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
-                        </svg>
-                    </button>
-                </form>
-                <!--Login buttons-->
-                @if (Context.User.Identity is { IsAuthenticated: true })
-                {
-                    <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
-
-                        <li class="nav-item">
-                            <a class="nav-link text-black bg-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 font-bold flex flex-row gap-2" asp-area="" asp-controller="User" asp-action="Profile">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-.189m-1.5.189a6.01 6.01 0 01-1.5-.189m3.75 7.478a12.06 12.06 0 01-4.5 0m3.75 2.383a14.406 14.406 0 01-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 10-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
-                                </svg>
-
-                                Perfil
-                            </a>
-                        </li>
-                        <li class="nav-item font-bold">
-                            <a class="nav-link text-black bg-[var(--second-color)] hover:text-[var(--white)] rounded-md px-3 py-2 font-bold flex flex-row gap-2" asp-area="" asp-controller="User" asp-action="Logout">
-                                Cerrar Sesión
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                }
-                else
-                {
-                    <ul class="flex lg:flex-row sm:flex-col items-center space-x-1.5">
-                        <li class="nav-item">
-
-                            <a class="btn hover:bg-amber-600 bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 font-bold flex flex-row gap-1" asp-area="" asp-controller="User" asp-action="Login">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" class="pr-2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z" />
-                                </svg>
-                                Iniciar Sesión
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn hover:bg-amber-600 hover:text-white rounded-md px-3 py-2 font-bold flex flex-row gap-1 bg-[var(--second-color)]"
-                               asp-area="" asp-controller="User" asp-action="Register">
-                                Registrate
+                        <a class="btn hover:bg-amber-600 bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 font-bold flex flex-row gap-1" asp-area="" asp-controller="User" asp-action="Login">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="pr-2 w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"/>
+                            </svg>
+                            Iniciar Sesión
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn hover:bg-amber-600 hover:text-white rounded-md px-3 py-2 font-bold flex flex-row gap-1 bg-[var(--second-color)]"
+                           asp-area="" asp-controller="User" asp-action="Register">
+                            Registrate
 
 
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" class="pl-2" />
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                }
-                @{
-                    /*
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" class="pl-2"/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            }
+            @{
+                /*
                     <<div class="space-x-1.5">
                     @* Register Modal *@
                     <!-- Button trigger modal -->
@@ -156,21 +162,21 @@
                     </div>
                     </div>
                     </div> */
-                }
+            }
 
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+        </div>
+    </nav>
+</header>
+<div class="container">
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    @await RenderSectionAsync("Scripts", false)
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+@await RenderSectionAsync("Scripts", false)
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
