Added the funcionality of moderating comments and added/moved the Admin Panel

--- a/OnlyPan/Views/Admin/Moderate.cshtml
+++ b/OnlyPan/Views/Admin/Moderate.cshtml
@@ -1,1 +1,2 @@
-<a asp-action="ViewRole" asp-controller="Role" class="btn btn-primary">Ver Peticiones de roles</a>
+<a asp-action="ViewRolePetitions" asp-controller="Role" class="btn btn-primary">Ver Peticiones de roles</a>
+<a asp-action="Comments" asp-controller="Admin" class="btn btn-primary">Ver comentarios reportados</a>
