--- a/OnlyPan/Views/Recipes/Index.cshtml
+++ b/OnlyPan/Views/Recipes/Index.cshtml
@@ -6,6 +6,7 @@
             <img class="img-thumbnail" src="data:image;base64,@Convert.ToBase64String(recipe.Photo!)" alt="imagen @recipe.Name"/>
             <div class="container flex-row">
                 <h1 class="title uppercase">@recipe.Name</h1>
+                <p class="disabled:text-gray-500">Valoracion General: @recipe.Rating</p>
                 <p class="text-black">@recipe.Description</p>
             </div>
         </div>
