--- a/OnlyPan/Views/Recipes/View.cshtml
+++ b/OnlyPan/Views/Recipes/View.cshtml
@@ -3,7 +3,13 @@
     <span class="text-danger">@ViewBag.Error</span>
     <span class="text-success">@ViewBag.Success</span>
     <h2 class="uppercase">@Model.Name</h2>
-    <h3 class="text-gray-500">Autor: @Model.Chef <span>@Model.Date</span></h3>
+    <h3 class="text-gray-500">
+        Autor:
+        <a class="linkprimary" asp-controller="User" asp-action="ProfileUser" asp-route-userId="@Model.ChefId">
+            @Model.Chef
+        </a>
+        <span>@Model.Date</span>
+    </h3>
     <p> Categoria: @Model.Category, Etiqueta: @Model.Tag</p>
     <img class="img-thumbnail" src="data:image;base64,@Convert.ToBase64String(Model.Photo!)" alt="imagen @Model.Name"/>
     <h3 class="uppercase">Descripcion de la receta</h3>
