--- a/OnlyPan/Views/Admin/Moderate.cshtml
+++ b/OnlyPan/Views/Admin/Moderate.cshtml
@@ -1,16 +1,14 @@
 
-<h1 class = "font-bold uppercase text-center my-2">Panel De Administración</h1>
+<h1 class = "font-bold uppercase text-center my-3">Panel De Administración</h1>
 <div class = "container flex justify-center items-center">
 
-    <div class="menu-containers flex flex-column gap-2 align-normal">
+    <div class="menu-containers flex flex-column gap-2 align-normal lg:w-1/2">
 
-        <div class="max-w-sm rounded overflow-hidden shadow-lg">
-        <a asp-action="ViewRolePetitions" asp-controller="Role" class="btn btn-primary">Ver Peticiones de roles</a>
-        </div>
+        
 
 
         <div class="max-w-sm w-full lg:max-w-full lg:flex">
-            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/img/card-left.jpg')" title="Woman holding a mug">
+            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/icons/rol.jpeg')" title="Peticiones de Roles">
             </div>
             <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
                 <div class="mb-8">
@@ -18,25 +16,45 @@
                         <svg class="fill-current text-gray-500 w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                             <path d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z" />
                         </svg>
-                        Members only
+                        Administrador
                     </p>
-                    <div class="text-gray-900 font-bold text-xl mb-2">Can coffee make you a better developer?</div>
-                    <p class="text-gray-700 text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+                    <div class="text-gray-900 font-bold text-xl mb-2">Peticiones de Roles</div>
+                    <p class="text-gray-700 text-base">En esta pestaña podrás controlar las solicitudes de roles que hagan los diferentes usuarios del sistema en OnlyPan. Crea chefs, asigna moderadores o coordinadores, la elección es tuya.</p>
                 </div>
-                <div class="flex items-center">
-                    <img class="w-10 h-10 rounded-full mr-4" src="/img/jonathan.jpg" alt="Avatar of Jonathan Reinink">
-                    <div class="text-sm">
-                        <p class="text-gray-900 leading-none">Jonathan Reinink</p>
-                        <p class="text-gray-600">Aug 18</p>
-                    </div>
+               
+                <div class="">
+                    <a asp-action="ViewRolePetitions" asp-controller="Role" class="btn btn-primary">Ver Peticiones de roles</a>
                 </div>
+
             </div>
         </div>
 
         
-        <div class ="item">
-        <a asp-action="Comments" asp-controller="Admin" class="btn btn-primary">Ver comentarios reportados</a>
+
+        <div class="max-w-sm w-full lg:max-w-full lg:flex">
+            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('/icons/commentary.jpg')" title="Comentarios Reportados">
+            </div>
+            <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+                <div class="mb-8">
+                    <p class="text-sm text-gray-600 flex items-center">
+                        <svg class="fill-current text-gray-500 w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                            <path d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z" />
+                        </svg>
+                        Administrador
+                    </p>
+                    <div class="text-gray-900 font-bold text-xl mb-2">Comentarios Reportados</div>
+                    <p class="text-gray-700 text-base">En esta pestaña podrás regular los comentarios que hayan sido reportados por la comunidad. Elige si eliminarlos del foro correspondiente o dejarlos allí.</p>
+                </div>
+
+                <div class="item">
+                    <a asp-action="Comments" asp-controller="Admin" class="btn btn-primary">Ver comentarios reportados</a>
+                </div>
+
+            </div>
         </div>
+
+
+      
     
     </div>
 
