Changed a sintax error for normalization: "text-uppercase" for "uppercase"

--- a/OnlyPan/Views/User/Profile.cshtml
+++ b/OnlyPan/Views/User/Profile.cshtml
@@ -1,7 +1,7 @@
 @model OnlyPan.Models.ViewModels.UserViewModels.ProfileViewModel
 
 <div class="container-fluid m-3 flex align-items-center flex-column">
-  <h1 class="text-uppercase font-bold my-3 text-xl">Perfil de usuario</h1>
+  <h1 class="uppercase font-bold my-3 text-xl">Perfil de usuario</h1>
   <!--TODO Display the profile into a more atractive way-->
     <div class="grid gap-1 grid-cols-2 w-1/2 justify-items-center my-3">
         <div class="img-prof flex align-items-center justify-items-center">
