Stylized the footer content and fixed an minimun height for the main content.

--- a/OnlyPan/wwwroot/css/site.css
+++ b/OnlyPan/wwwroot/css/site.css
@@ -124,3 +124,12 @@ color: inherit;
 .user-image {
     border-radius: 12px;
 }
+
+footer {
+
+    bottom: 0;
+    width: 100%;
+}
+main {
+    min-height: 80vh;
+}
