--- a/OnlyPan/Views/Role/ViewRolePetitions.cshtml
+++ b/OnlyPan/Views/Role/ViewRolePetitions.cshtml
@@ -10,7 +10,54 @@
         <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
             <div class="overflow-hidden">
 
-
+                <table class="table min-w-full text-left text-sm">
+                    <thead class=" border-b font-medium dark:border-neutral-500">
+                        <tr>
+                            <th scope="col" class="px-6 py-4">
+                                Nombre de Usuario
+                            </th>
+                            <th scope="col" class="px-6 py-4">
+                                Rol Actual
+                            </th>
+                            <th scope="col" class="px-6 py-4">
+                                Rol Solicitado
+                            </th>
+                            <th scope="col" class="px-6 py-4">
+                                Fecha de Solicitud
+                            </th>
+                            <th scope="col" class="px-6 py-4">
+                                Acciones
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var petition in Model)
+                        {
+                            <tr class="border-b transition duration-300 ease-in-out hover:bg-orange-200 dark:border-orange-200 dark:hover:bg-orange-200">
+                                <td class="whitespace-nowrap px-6 py-4 font-medium">
+                                    @Html.DisplayFor(m => petition.UserName)
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4">
+                                    @Html.DisplayFor(m => petition.CurrentRoleName)
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4">
+                                    @Html.DisplayFor(m => petition.RequesedRoleName)
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4">
+                                    @Html.DisplayFor(m => petition.Time)
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4">
+                                    <a class="link-success space-x-1.5" asp-action="ViewProfileRol" asp-controller="User"
+                                       asp-route-idUser="@petition.IdUser" asp-route-idRol="@petition.IdRequesedRole">
+                                        Ver Perfil
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                        <span class="alert-danger">@ViewBag.Error</span>
+                        <span class="alert-success">@ViewBag.Success</span>
+                    </tbody>
+                </table>
 
 
             </div>
@@ -19,51 +66,3 @@
 </div>
 
 
-<table class="table min-w-full text-left text-sm">
-    <thead class=" border-b font-medium dark:border-neutral-500">
-    <tr>
-        <th scope="col" class="px-6 py-4">
-            Nombre Usuario
-        </th>
-            <th scope="col" class="px-6 py-4">
-            Rol Actual
-        </th>
-            <th scope="col" class="px-6 py-4">
-            Rol Solicitado
-        </th>
-            <th scope="col" class="px-6 py-4">
-            Fecha de Solicitud
-        </th>
-            <th scope="col" class="px-6 py-4">
-            Acciones
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var petition in Model)
-    {
-            <tr class="border-b transition duration-300 ease-in-out hover:bg-orange-200 dark:border-orange-200 dark:hover:bg-orange-200">
-                <td class="whitespace-nowrap px-6 py-4 font-medium">
-                @Html.DisplayFor(m => petition.UserName)
-            </td>
-                <td class="whitespace-nowrap px-6 py-4">
-                @Html.DisplayFor(m => petition.CurrentRoleName)
-            </td>
-                <td class="whitespace-nowrap px-6 py-4">
-                @Html.DisplayFor(m => petition.RequesedRoleName)
-            </td>
-                <td class="whitespace-nowrap px-6 py-4">
-                @Html.DisplayFor(m => petition.Time)
-            </td>
-                <td class="whitespace-nowrap px-6 py-4">
-                <a class="link-success space-x-1.5" asp-action="ViewProfileRol" asp-controller="User"
-                   asp-route-idUser="@petition.IdUser" asp-route-idRol="@petition.IdRequesedRole">
-                    Ver Perfil
-                </a>
-            </td>
-        </tr>
-    }
-    <span class="alert-danger">@ViewBag.Error</span>
-    <span class="alert-success">@ViewBag.Success</span>
-    </tbody>
-</table>
