--- a/OnlyPan/Views/Shared/_Layout.cshtml
+++ b/OnlyPan/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                     @if (Context.User.IsInRole("2") || Context.User.IsInRole("3"))
                     {
                         <li class="nav-item font-bold">
-                            <a class="nav-link text-black hover:bg-amber-600   bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Admin" asp-action="Moderate">Panel Administración</a>
+                            <a class="nav-link text-black hover:bg-amber-600   bg-[var(--second-color)] hover:text-white rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Admin" asp-action="Moderate">Panel De Administración</a>
                         </li>
                     }
                 </ul>
