Changed the codification of moderate.cshtml

--- a/OnlyPan/Views/Admin/Moderate.cshtml
+++ b/OnlyPan/Views/Admin/Moderate.cshtml
@@ -1,5 +1,5 @@
-
-<h1 class = "font-bold uppercase text-center my-3">Panel De AdministraciÛn</h1>
+Ôªø
+<h1 class = "font-bold uppercase text-center my-3">Panel De Administraci√≥n</h1>
 <div class = "container flex justify-center items-center">
 
     <div class="menu-containers flex flex-column gap-2 align-normal lg:w-1/2">
@@ -19,7 +19,7 @@
                         Administrador
                     </p>
                     <div class="text-gray-900 font-bold text-xl mb-2">Peticiones de Roles</div>
-                    <p class="text-gray-700 text-base">En esta pestaÒa podr·s controlar las solicitudes de roles que hagan los diferentes usuarios del sistema en OnlyPan. Crea chefs, asigna moderadores o coordinadores, la elecciÛn es tuya.</p>
+                    <p class="text-gray-700 text-base">En esta pesta√±a podr√°s controlar las solicitudes de roles que hagan los diferentes usuarios del sistema en OnlyPan. Crea chefs, asigna moderadores o coordinadores, la elecci√≥n es tuya.</p>
                 </div>
                
                 <div class="">
@@ -43,7 +43,7 @@
                         Administrador
                     </p>
                     <div class="text-gray-900 font-bold text-xl mb-2">Comentarios Reportados</div>
-                    <p class="text-gray-700 text-base">En esta pestaÒa podr·s regular los comentarios que hayan sido reportados por la comunidad. Elige si eliminarlos del foro correspondiente o dejarlos allÌ.</p>
+                    <p class="text-gray-700 text-base">En esta pesta√±a podr√°s regular los comentarios que hayan sido reportados por la comunidad. Elige si eliminarlos del foro correspondiente o dejarlos all√≠.</p>
                 </div>
 
                 <div class="item">
