Changed the codification of some view that were wrong and changed the connection string

--- a/OnlyPan/Views/Admin/Comments.cshtml
+++ b/OnlyPan/Views/Admin/Comments.cshtml
@@ -18,7 +18,7 @@
                                 Comentario
                             </th>
                             <th scope="col" class="px-6 py-4">
-                                Fecha de Publicación
+                                Fecha de PublicaciÃ³n
                             </th>
                             <th scope="col" class="px-6 py-4">
                                 Acciones
