--- a/OnlyPan/Views/User/ViewProfileRol.cshtml
+++ b/OnlyPan/Views/User/ViewProfileRol.cshtml
@@ -1,7 +1,7 @@
 @model OnlyPan.Models.ViewModels.UserViewModels.ProfileRolViewModel
 
     <div class="container-fluid m-3 flex align-items-center flex-column">
-  <h1 class="uppercase font-bold py-3 text-xl">Asignación de rol</h1>
+  <h1 class="uppercase font-bold py-3 text-xl">AsignaciÃ³n de rol</h1>
   <!--TODO Display the profile into a floating card-->
 
         <div class="grid gap-1 grid-cols-2 w-1/2 justify-items-center my-3">
