--- a/OnlyPan/Views/Recipes/Create.cshtml
+++ b/OnlyPan/Views/Recipes/Create.cshtml
@@ -9,8 +9,8 @@
                 <input asp-for="Name" class="pl-3 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
             </div>
             <div class="group">
-                <label asp-for="Photo" class="block text-sm font-medium leading-6 text-gray-900 text-uppercase"></label>
-                <input asp-for="Photo" type="file" class="block w-full rounded-md">
+                <label asp-for="Photos" class="block text-sm font-medium leading-6 text-gray-900 text-uppercase"></label>
+                <input asp-for="Photos" type="file" class="block w-full rounded-md" multiple>
             </div>
             <div class="group">
                 <label asp-for="Description" class="block text-sm font-medium leading-6 text-gray-900 text-uppercase"></label>
@@ -73,12 +73,13 @@
         var ingredientName = option.options[option.selectedIndex].text;
         var quantity = document.getElementById("Quantity").value;
         var unit = document.getElementById("Unit").value;
+        var unitText = document.getElementById("Unit").options[document.getElementById("Unit").selectedIndex].text;
         ingredients.push(idIngredient);
         quantities.push(quantity);
         units.push(unit);
         var ul = document.getElementById("ingredients-list");
         var li = document.createElement("li");
-        li.appendChild(document.createTextNode(ingredientName + " " + quantity + " " + unit));
+        li.appendChild(document.createTextNode(ingredientName + " " + quantity + " " + unitText));
         ul.appendChild(li);
     }
     //TODO: Fix this function to remove the ingredient from the list
