--- a/OnlyPan/Views/Recipes/View.cshtml
+++ b/OnlyPan/Views/Recipes/View.cshtml
@@ -11,12 +11,15 @@
         <span>@Model.Date</span>
     </h3>
     <p> Categoria: @Model.Category, Etiqueta: @Model.Tag</p>
-    <img class="img-thumbnail" src="data:image;base64,@Convert.ToBase64String(Model.Photo!)" alt="imagen @Model.Name"/>
+    @foreach(var photo in Model.Photos!)
+    {
+        <img class="img-thumbnail" src="data:image;base64,@Convert.ToBase64String(photo)" alt="imagen @Model.Name"/>
+    }
     <h3 class="uppercase">Descripcion de la receta</h3>
     <p class="text-black">@Model.Description</p>
     <h3 class="uppercase">Ingredientes de la receta</h3>
     <ul class="list-disc">
-        @foreach (var ingredient in Model.Ingredients)
+        @foreach (var ingredient in Model.Ingredients!)
         {
             <li>@ingredient</li>
         }
